@@ -1,4 +1,4 @@
-/* $Id: tmux.c,v 1.92 2009-01-11 00:48:42 nicm Exp $ */
+/* $Id: tmux.c,v 1.93 2009-01-12 23:37:02 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -234,6 +234,7 @@ main(int argc, char **argv)
 	options_set_number(&global_options, "message-bg", 3);
 	options_set_number(&global_options, "message-fg", 0);
 	options_set_number(&global_options, "prefix", META);
+	options_set_number(&global_options, "prefix-time", 300);
 	options_set_number(&global_options, "set-titles", 1);
 	options_set_number(&global_options, "lock-after-time", 1800);
 	options_set_number(&global_options, "status", 1);
