@@ -1,5 +1,8 @@
 12 January 2009
 
+* Option to set prefix time, allowing multiple commands to be entered without
+  pressing the prefix key again, so long as they each typed within this time of
+  each other.
 * Yet more hacks for key handling. Think it is just about working now.
 * Two commands, resize-pane-up and resize-pane-down to resize a pane.
 * Make the window pane code handle panes of different sizes, and add a -l
@@ -884,7 +887,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.198 2009-01-12 22:48:00 nicm Exp $
+$Id: CHANGES,v 1.199 2009-01-12 23:37:02 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
